--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
 </head>
 <body>
 <header>
-  <img src="https://scontent-mrs2-3.xx.fbcdn.net/v/t39.30808-6/483940339_1203290995139705_1629202427472008641_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=xQqgWH99DHwQ7kNvwEZWyaw&_nc_oc=AdnjbntYWbOwnWi3zku47PN_i5xnhvm3eyV1rQpFSj74g6U1ClxWLZVMLMEXuDQXNQ8&_nc_zt=23&_nc_ht=scontent-mrs2-3.xx&_nc_gid=gOYyJzV7fQRW5k7pU7XQkQ&oh=00_Afn8XnTbYKm633WCqZUlFu6G1iHnwjAmsoEuYmaH9vQy4g&oe=694510D0" alt="COXX" />
+  <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/2f/6d/1b/31/le-bar-lgbt-de-montpellier.jpg?w=1000&h=-1&s=1" alt="COXX" />
   <div>
     <h1>COXX – Gestion des stocks 2025</h1>
     <span>Format compté, besoins hebdo, conditionnements & listes de courses – données intégrées</span>
